--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -204,3 +204,18 @@ img, video, iframe {
 .page-loaded .animate-on-load {
   animation-play-state: running;
 }
+
+/* Line clamp utilities */
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.line-clamp-3 {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
